Migrate tests to JUnit5 (#809)